--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class = "header__main">
 				<a href = "#"><img class = "header__main__logo" src = "/f/i/header-logo.png"></img></a>
 				<ul class = "header__menu">
-					<li class = "header__menu__item header__main__menu__item_1">
+					<li class = "header__menu__item header__menu__item_1">
 						<a class = "header__menu__link " href = "#">Растения</a>
 						<ul class = "header__sub-menu">
 							<li class = "header__sub-menu__item"><a href = "#" class = "header__sub-menu__link">Хвойные растения</a></li>
