--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <link rel="stylesheet" href="/f/css/style.css">
-  <link rel="stylesheet" href="/f/css/normalize.css">
+  <link rel="stylesheet" href="f/css/style.css">
+  <link rel="stylesheet" href="f/css/normalize.css">
   <!--[if lte IE 9]><link rel="stylesheet" href="f/css/ie.css"><![endif]-->
  <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&subset=latin,cyrillic-ext,cyrillic,latin-ext' rel='stylesheet' type='text/css'>
  <link href='http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic&subset=latin,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/f/fancybox/jquery.fancybox.css?v=2.1.5" media="screen">
+  <link rel="stylesheet" href="f/fancybox/jquery.fancybox.css?v=2.1.5" media="screen">
   <link rel="shortcut icon" href="favicon.ico">
-  <script src="/f/js/jquery-1.10.2.min.js"></script>
-  <script src="/f/js/jquery.carouFredSel-6.2.1-packed.js"></script>
-  <script src="/f/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
-  <script src="/f/js/jquery.touchSwipe.min.js"></script>
-  <script src="/f/js/jquery.transit.min.js"></script>
-  <script src="/f/js/common.js"></script>
-  <script src="/f/js/less-1.7.3.min.js" type="text/javascript"></script>
-  <link rel="stylesheet/less" type="text/css" href="/f/less/style.less">
+  <script src="f/js/jquery-1.10.2.min.js"></script>
+  <script src="f/js/jquery.carouFredSel-6.2.1-packed.js"></script>
+  <script src="f/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
+  <script src="f/js/jquery.touchSwipe.min.js"></script>
+  <script src="f/js/jquery.transit.min.js"></script>
+  <script src="f/js/common.js"></script>
+  <script src="f/js/less-1.7.3.min.js" type="text/javascript"></script>
+  <link rel="stylesheet/less" type="text/css" href="f/less/style.less">
   
   <!--[if lt IE 9]><script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
   <script>
@@ -101,7 +101,7 @@
 			</div>
 			<div style = "clear: both"></div>
 			<div class = "header__main">
-				<a href = "#"><img class = "header__main__logo" src = "/f/i/header-logo.png"></img></a>
+				<a href = "#"><img class = "header__main__logo" src = "f/i/header-logo.png"></img></a>
 				<ul class = "header__menu">
 					<li class = "header__menu__item header__menu__item_1">
 						<a class = "header__menu__link " href = "#">Растения</a>
@@ -169,7 +169,7 @@
 				<div class = "main-banner__holder">
 					<ul class = "main-banner__holder__slider">
 						<li class = "main-banner__item">
-							<img src = "/f/i/main-slides/slide1.jpg" class = "main-banner__image"/>
+							<img src = "f/i/main-slides/slide1.jpg" class = "main-banner__image"/>
 							<div class = "main-banner__info">
 								<span class = "main-banner__info__title">Принимаем заказы на саженцы Розы KORDES (Кордес), Германия</span>
 								<p class = "main-banner__info__text">У нас вы можете приобрести розы из новой весенней коллекции 2014 года.С ассортиментом и ценами можно ознакомиться на страничке садового центра.</p>
@@ -177,7 +177,7 @@
 							</div>
 						</li>
 						<li class = "main-banner__item">
-							<img src = "/f/i/main-slides/slide2.jpg" class = "main-banner__image"/>
+							<img src = "f/i/main-slides/slide2.jpg" class = "main-banner__image"/>
 							<div class = "main-banner__info">
 								<span class = "main-banner__info__title">Открытие Садового центра «Garden Rose» в ТРК Альтаир</span>
 								<p class = "main-banner__info__text">На площади в 1 000 м2 представлены лучшие предложения живых растений и материалов для обустройства сада.</p>
@@ -185,7 +185,7 @@
 							</div>
 						</li>
 						<li class = "main-banner__item">
-							<img src = "/f/i/main-slides/slide3.jpg" class = "main-banner__image"/>
+							<img src = "f/i/main-slides/slide3.jpg" class = "main-banner__image"/>
 							<div class = "main-banner__info">
 								<span class = "main-banner__info__title">Туя западная «Смарагт» 269 рублей</span>
 								<p class = "main-banner__info__text">Только  первые 10 дней мая  аристократичные туи,  величественные ели и вольяжные  можжевельники  в огромном ассортименте и по суперцене.</p>
@@ -193,7 +193,7 @@
 							</div>
 						</li>
 						<li class = "main-banner__item">
-							<img src = "/f/i/main-slides/slide4.jpg" class = "main-banner__image"/>
+							<img src = "f/i/main-slides/slide4.jpg" class = "main-banner__image"/>
 							<div class = "main-banner__info">
 								<span class = "main-banner__info__title">16 мая – День открытых дверей в Садовом центре «Garden Rose»</span>
 								<p class = "main-banner__info__text">Приятные сюрпризы, неожиданные предложения, акции, лотереи, скидки и подарки. Все для хорошего настроения!</p>
@@ -218,7 +218,7 @@
 						<a href = "#" class = "prof-center__main__catalog__link">В каталог</a>
 					</span>
 				</div>
-				<img src = "/f/i/prof-center-back.png" class = "prof-center__main__back-image"/>
+				<img src = "f/i/prof-center-back.png" class = "prof-center__main__back-image"/>
 			</div>
 			<div class = "prof-center__detail">
 				<p class = "prof-center__detail__text"><strong>GARDEN ROSE </strong>— уникальный формат садовых розничных магазинов, где основным товаром являются растения для сада, а хорошее позитивное настроение посетителей — главная цель  команды садового центра.</p>
@@ -253,9 +253,9 @@
 				<div class = "about-center__slider">
 					<div class = "about-center__slider__wrap">
 						<ul class = "about-center__slider__content">
-							<li class = "about-center__slider__item"><img src = "/f/i/main-slides/slide4.jpg" class = "about-center__slider__image"/></li>
-							<li class = "about-center__slider__item"><img src = "/f/i/main-slides/slide3.jpg" class = "about-center__slider__image"/></li>
-							<li class = "about-center__slider__item"><img src = "/f/i/main-slides/slide1.jpg" class = "about-center__slider__image"/></li>
+							<li class = "about-center__slider__item"><img src = "f/i/main-slides/slide4.jpg" class = "about-center__slider__image"/></li>
+							<li class = "about-center__slider__item"><img src = "f/i/main-slides/slide3.jpg" class = "about-center__slider__image"/></li>
+							<li class = "about-center__slider__item"><img src = "f/i/main-slides/slide1.jpg" class = "about-center__slider__image"/></li>
 						</ul>
 						
 					</div>
@@ -277,19 +277,19 @@
 					<div class = "about-center__partners__slider__wrap">
 						<ul class = "about-center__partners__slider__content">
 							<li class = "about-center__partners__slider__item">
-								<a href = "#" class = "about-center__partners__slider__link"><img src = "/f/i/partners/partner1.jpg" class = "about-center__partners__slider__image"/></a>
+								<a href = "#" class = "about-center__partners__slider__link"><img src = "f/i/partners/partner1.jpg" class = "about-center__partners__slider__image"/></a>
 							</li>
 							<li class = "about-center__partners__slider__item">
-								<a href = "#" class = "about-center__partners__slider__link"><img src = "/f/i/partners/partner3.jpg" class = "about-center__partners__slider__image"/></a>
+								<a href = "#" class = "about-center__partners__slider__link"><img src = "f/i/partners/partner3.jpg" class = "about-center__partners__slider__image"/></a>
 							</li>
 							<li class = "about-center__partners__slider__item">
-								<a href = "#" class = "about-center__partners__slider__link"><img src = "/f/i/partners/partner4.jpg" class = "about-center__partners__slider__image"/></a>
+								<a href = "#" class = "about-center__partners__slider__link"><img src = "f/i/partners/partner4.jpg" class = "about-center__partners__slider__image"/></a>
 							</li>
 							<li class = "about-center__partners__slider__item">
-								<a href = "#" class = "about-center__partners__slider__link"><img src = "/f/i/partners/partner2.jpg" class = "about-center__partners__slider__image"/></a>
+								<a href = "#" class = "about-center__partners__slider__link"><img src = "f/i/partners/partner2.jpg" class = "about-center__partners__slider__image"/></a>
 							</li>
 							<li class = "about-center__partners__slider__item">
-								<a href = "#" class = "about-center__partners__slider__link"><img src = "/f/i/partners/partner3.jpg" class = "about-center__partners__slider__image"/></a>
+								<a href = "#" class = "about-center__partners__slider__link"><img src = "f/i/partners/partner3.jpg" class = "about-center__partners__slider__image"/></a>
 							</li>
 						</ul>
 						<span class="about-center__partners__slider__prev"></span>
