--- a/index2.html
+++ b/index2.html
@@ -106,9 +106,9 @@
 			</div>
 			<div class="b-catalog">
 				<ul class="b-submenu">
-					<li class="b-submenu__item b-submenu__item_1"><a href="#" class="b-submenu__link">Лиственные деревья и кустарники</a></li>
+					<li class="b-submenu__item b-submenu__item_1"><a href="#" class="b-submenu__link">Лиственные деревья <br>и кустарники</a></li>
 					<li class="b-submenu__item b-submenu__item_2 b-submenu__item_active">
-						<a href="#" class="b-submenu__link">Хвойные деревья и кустарники</a>
+						<a href="#" class="b-submenu__link">Хвойные деревья <br>и кустарники</a>
 						<ul>
 							<li><a href="#">Ель</a><span>(8)</span></li>
 							<li><a href="#">Лиственница</a><span>(4)</span></li>
