--- a/index3.html
+++ b/index3.html
@@ -105,21 +105,24 @@
 				</div>			
 			</div>
 			<div class="b-catalog">
-				<ul class="b-submenu">
-					<li class="b-submenu__item b-submenu__item_1"><a href="#" class="b-submenu__link">Лиственные деревья <br>и кустарники</a></li>
-					<li class="b-submenu__item b-submenu__item_2 b-submenu__item_active">
-						<a href="#" class="b-submenu__link">Хвойные деревья <br>и кустарники</a>
+				<ul class="b-submenu b-submenu_scrolled">
+					<li class="b-submenu__item b-submenu__item_1 b-submenu__item_active">
+						<a href="#" class="b-submenu__link">Лиственные деревья <br>и кустарники</a>
 						<div class="b-submenu__inner">
 							<ul>
-								<li><a href="#">Ель</a><span>(8)</span></li>
-								<li><a href="#">Лиственница</a><span>(4)</span></li>
-								<li><a href="#">Можжевельник</a><span>(28)</span></li>
-								<li><a href="#">Пихта</a><span>(1)</span></li>
-								<li><a href="#">Сосна</a><span>(6)</span></li>
-								<li><a href="#">Туя западная</a><span>(10)</span></li>
+								<li><a href="#">Айва</a><span>(8)</span></li>
+								<li><a href="#">Акация</a><span>(4)</span></li>
+								<li><b>Барбарис</b><span>(28)</span></li>
+								<li><a href="#">Береза</a><span>(1)</span></li>
+								<li><a href="#">Бересклет</a><span>(6)</span></li>
+								<li><a href="#">Бирючина</a><span>(10)</span></li>
+								<li><a href="#">Боярышник</a><span>(6)</span></li>
+								<li><a href="#">Буддлея</a><span>(10)</span></li>
+								<li><a href="#">Бересклет</a><span>(6)</span></li>
 							</ul>
-						</div>	
+						</div>
 					</li>
+					<li class="b-submenu__item b-submenu__item_2"><a href="#" class="b-submenu__link">Хвойные деревья <br>и кустарники</a></li>
 					<li class="b-submenu__item b-submenu__item_3"><a href="#" class="b-submenu__link">Многолетние  травянистые растения</a></li>
 					<li class="b-submenu__item b-submenu__item_4"><a href="#" class="b-submenu__link">Розы</a></li>
 					<li class="b-submenu__item b-submenu__item_5"><a href="#" class="b-submenu__link">Плодово-ягодные растения</a></li>
@@ -131,129 +134,55 @@
 						<ul>
 							<li><a href="#">Главная</a></li>
 							<li><a href="#">Растения</a></li>
-							<li><span>Хвойные деревья и кустарники</span></li>
+							<li><a href="#">Лиственные деревья и кустарники</a></li>
+							<li><span>Барбарис</span></li>
 						</ul>
 					</div>
-					<p class="b-catalog__title">Хвойные деревья и кустарники</p>
+					<p class="b-catalog__title">Вам может потребоваться</p>
 					<div class="b-catalog__section">
 						<span class="b-catalog__sep"></span>
 						<div class="b-catalog__holder">
 							<div class="b-catalog__item b-catalog__item_descr">
-								<p class="b-catalog__item-title">Ель</p>
-								<p class="b-catalog__item-text">Род деревьев семейства Сосновые (Pinaceae). Ель может давать молодые побеги-клоны из корней погибшего дерева. Это старейший известный древесный организм на Земле.</p>
+								<div class="b-catalog__ico">
+									<img src="f/i/catalog/ico1.png" alt="">
+								</div>
+								<p class="b-catalog__item-text">У нас вы можете найти большой выбор ландшафтного материалы для обустройства вашего сада.</p>
 								<a href="#" class="arrowed-link">Подробнее</a>
 							</div><a href="#" class="b-catalog__item">
 								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/1.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Glauca Globosa», Глаука Глобоза</span>
-									<span class="b-catalog__price">от <b>4100 </b><b class="rub">&#8399;</b></span>
+									<span class="b-catalog__img"><img src="f/i/catalog/4.jpg" alt=""></span>
+									<span class="b-catalog__name">Гравий природный декоративный</span>
+									<span class="b-catalog__price">от <b>450 </b><b class="rub">&#8399;</b></span>
 								</span>
 							</a><a href="#" class="b-catalog__item">
 								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/2.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Glauca», Глаука</span>
-									<span class="b-catalog__price">от <b>3200 </b><b class="rub">&#8399;</b></span>
+									<span class="b-catalog__img"><img src="f/i/catalog/5.jpg" alt=""></span>
+									<span class="b-catalog__name">Мраморная крошка белая</span>
+									<span class="b-catalog__price">от <b>130 </b><b class="rub">&#8399;</b></span>
 								</span>
 							</a><a href="#" class="b-catalog__item">
 								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/3.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Koster», Костер</span>
-									<span class="b-catalog__price">от <b>2450 </b><b class="rub">&#8399;</b></span>
+									<span class="b-catalog__img"><img src="f/i/catalog/6.jpg" alt=""></span>
+									<span class="b-catalog__name">Песчаник бело-желтый</span>
+									<span class="b-catalog__price">от <b>320 </b><b class="rub">&#8399;</b></span>
 								</span>
-							</a><a href="#" class="b-catalog__item">
+							</a><div class="b-catalog__item b-catalog__item_descr">
+								<div class="b-catalog__ico">
+									<img src="f/i/catalog/ico2.png" alt="">
+								</div>
+								<p class="b-catalog__item-text">Различные декоративные товары для обустройства сада на любой вкус.</p>
+								<a href="#" class="arrowed-link">Подробнее</a>
+							</div><a href="#" class="b-catalog__item">
 								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/3.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Koster», Костер</span>
-									<span class="b-catalog__price">от <b>2450 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/3.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Koster», Костер</span>
-									<span class="b-catalog__price">от <b>2450 </b><b class="rub">&#8399;</b></span>
+									<span class="b-catalog__img"><img src="f/i/catalog/7.jpg" alt=""></span>
+									<span class="b-catalog__name">Садовые горшки деревянные</span>
+									<span class="b-catalog__price">от <b>1250 </b><b class="rub">&#8399;</b></span>
 								</span>
 							</a>
 						</div>
 					</div>
 					<div class="b-catalog__section">
-						<span class="b-catalog__sep b-catalog__sep_2"></span>
-						<div class="b-catalog__holder">
-							<div class="b-catalog__item b-catalog__item_descr">
-								<p class="b-catalog__item-title">Лиственница</p>
-								<p class="b-catalog__item-text">Самая распространённая порода деревьев на планете и в России. В Сибири и на Дальнем Востоке России занимает огромные площади, где произрастает от юга Приморья до северных границ.</p>
-								<a href="#" class="arrowed-link">Подробнее</a>
-							</div><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/1.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Glauca Globosa», Глаука Глобоза</span>
-									<span class="b-catalog__price">от <b>4100 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/2.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Glauca», Глаука</span>
-									<span class="b-catalog__price">от <b>3200 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/3.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Koster», Костер</span>
-									<span class="b-catalog__price">от <b>2450 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/3.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Koster», Костер</span>
-									<span class="b-catalog__price">от <b>2450 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/3.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Koster», Костер</span>
-									<span class="b-catalog__price">от <b>2450 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a>
-						</div>
-					</div>
-					<div class="b-catalog__section">
-						<span class="b-catalog__sep b-catalog__sep_3"></span>
-						<div class="b-catalog__holder">
-							<div class="b-catalog__item b-catalog__item_descr">
-								<p class="b-catalog__item-title">Лиственница</p>
-								<p class="b-catalog__item-text">Самая распространённая порода деревьев на планете и в России. В Сибири и на Дальнем Востоке России занимает огромные площади, где произрастает от юга Приморья до северных границ.</p>
-								<a href="#" class="arrowed-link">Подробнее</a>
-							</div><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/1.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Glauca Globosa», Глаука Глобоза</span>
-									<span class="b-catalog__price">от <b>4100 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/2.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Glauca», Глаука</span>
-									<span class="b-catalog__price">от <b>3200 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/3.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Koster», Костер</span>
-									<span class="b-catalog__price">от <b>2450 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/3.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Koster», Костер</span>
-									<span class="b-catalog__price">от <b>2450 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a><a href="#" class="b-catalog__item">
-								<span class="b-catalog__item-holder">
-									<span class="b-catalog__img"><img src="f/i/catalog/3.jpg" alt=""></span>
-									<span class="b-catalog__name">Ель колючая «Koster», Костер</span>
-									<span class="b-catalog__price">от <b>2450 </b><b class="rub">&#8399;</b></span>
-								</span>
-							</a>
-						</div>
+						<span class="b-catalog__sep b-catalog__sep_more"><a href="#" class="arrowed-link arrowed-link_down">Показать еще</a></span>
 					</div>
 				</div>
 			</div>
